force-app/main/default/objects/Certification_Attempt__c/fields/Attemp_Date__c.field-meta.xml
<CustomField>
    <fullName>Attemp_Date__c</fullName>
    <description>would owome to track time and date more precision, to limit , may be filled automatically after some submit score or hits complete, 
and time now will fill .</description>
    <label>Attemp Date</label>
    <type>Date</type>
</CustomField>