force-app/main/default/objects/Certification_Attempt__c/fields/Certification_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Certification_Candidate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Certifaction candiate(contact) I can label it , anything, 
While all course must have student(contacts) not all Candate(contact) will have a certification, 
I could filter contact with certain criteria like recordtype, or they have pay or passed certain pre exam</description>
    <label>Certification Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Certification Attempts</relationshipLabel>
    <relationshipName>Certification_Attempts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>