force-app/main/default/objects/Certification_Attempt__c/fields/Certification_Element__c.field-meta.xml
<CustomField>
    <fullName>Certification_Element__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Surely I must know which test they attempting(lab, multiple choice) base on record type and pickllist option. 

Filter Criteria	
((Certification Attempt: Record TypeEQUALSMultiple Choice) AND (Certification Element: TypeEQUALSMultiple Choice)) OR ((Certification Attempt: Record TypeEQUALSLab) AND (Certification Element: TypeEQUALSLab))</description>
    <label>Certification Element</label>
    <referenceTo>Certification_Element__c</referenceTo>
    <relationshipLabel>Certification Attempts</relationshipLabel>
    <relationshipName>Certification_Attempts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>