force-app/main/default/objects/Certification_Attempt__c/fields/Certification_Id__c.field-meta.xml
<CustomField>
    <fullName>Certification_Id__c</fullName>
    <description>base on fact thet element is a child of certication, then transcverse</description>
    <formula>CASESAFEID( Certification_Element__r.Certification__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certification Id</label>
    <type>Text</type>
</CustomField>