force-app/main/default/objects/Certification_Attempt__c/fields/Certifying_Instructor__c.field-meta.xml
<CustomField>
    <fullName>Certifying_Instructor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Certifying Instructor, he must a tech nicain , which is checbox to the user obj and wonder if they record types.?</description>
    <label>Certifying Instructor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Certification_Attempts</relationshipName>
    <type>Lookup</type>
</CustomField>