force-app/main/default/objects/Certification_Attempt__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <description>This can be fill autocatically if they checkbox is 1 or true , then filled with nowTime.</description>
    <label>Completion Date</label>
    <type>DateTime</type>
</CustomField>