force-app/main/default/objects/Certification_Attempt__c/fields/Number_of_Elements_for_Cert__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Elements_for_Cert__c</fullName>
    <formula>Certification_Element__r.Certification__r.Number_of_Certification_Elements__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Elements for Cert</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>