force-app/main/default/objects/Certification_Attempt__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date a candidate starts a Lab certification element. Meaning this field will only be avaialbe on the lab record type and page layout(?</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>